crates/oopsie/tests/snapshots/provider_reach__welp_wrap_erased_source_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/provider_reach.rs
expression: report
---
Error: outer
  at crates/oopsie/tests/provider_reach.rs:[LOC]
  ╰─▶ inner failed: disk offline

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 7 frames hidden ...
  1: provider_reach[[HASH]]::wrap_site
           at tests/provider_reach.rs:[LOC]
  2: provider_reach[[HASH]]::test_welp_wrap_reaches_erased_source_trace
           at tests/provider_reach.rs:[LOC]
  3: provider_reach[[HASH]]::test_welp_wrap_reaches_erased_source_trace::{closure#0}
           at tests/provider_reach.rs:[LOC]
   ... 22 frames hidden ...
